<resources>
    <string name="app_name">Mama\'s Cook Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mama\'s Cook Book</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="text_recipe_name">Recipe Name</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_instructions">Instructions</string>
    <string name="submit_recipe">Add Recipe</string>
    <string-array name="spinner_recipe_measurement">
        <item>cups</item>
        <item>L</item>
        <item>lbs</item>
        <item>mL</item>
        <item>oz</item>
        <item>tbs</item>
        <item>tsp</item>
    </string-array>

    <string name="button_delete_all">Delete All Recipes</string>
    <string name="button_delete_one">Delete This Recipe</string>
    <string name="button_add_new">Add New Recipe</string>
    <string name="goto_add">Add New Recipe</string>
    <string name="goto_gallery">Start Cooking</string>

    <string name="menu_add_new">Add New</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Recipes</string>
</resources>
