<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddFragment"
    android:id="@+id/fragment_add">

    <ImageButton
        android:id="@+id/button_add_new"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/primary_button"
        android:translationZ="1dp"
        app:srcCompat="@drawable/ic_menu_new"
        android:contentDescription="@string/button_add_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/text_multiline_border"
        app:layout_constraintBottom_toBottomOf="@+id/space"
        app:layout_constraintEnd_toEndOf="@+id/space"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/text_recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:background="@null"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="@dimen/text_input_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/text_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_recipe_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/text_input_size"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toTopOf="@+id/space" />

    <EditText
        android:id="@+id/text_recipe_amount"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="1"
        android:inputType="number"
        android:textSize="@dimen/text_input_size"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_ingredients"
        android:textSize="@dimen/title_size"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/text_recipe_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_instructions"
        android:textSize="@dimen/title_size"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/text_recipe_amount" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_measurement"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/spinner_recipe_measurement"
        app:layout_constraintStart_toEndOf="@+id/text_recipe_amount"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>